mengubah index.html dan menambahkan foto

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ https://www.tooplate.com/view/2120-ben-resume
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
                         <div class="hero-text">
 
-                            <h1 class="hero-title">👋 Ben, a digital nomad</h1>
+                            <h1 class="hero-title">👋 Zur, a digital nomad</h1>
 
                             <a href="#" class="email-link">
-                                hello@company.co
+                                azzuriaja968@gmail.com
                             </a>
                           
                         </div>
@@ -105,18 +105,17 @@ https://www.tooplate.com/view/2120-ben-resume
                     <p>However, please do not re-distribute the downloadable template ZIP file on any template collection website. This is strongly prohibited. Please contact Tooplate for more information.</p>
 
                     <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
-                        <li><strong>Full Name :</strong> Ben Wilson </li>
+                        <li><strong>Full Name :</strong> Azzuri </li>
 
-                        <li><strong>Date of Birth:</strong> 26 September 1999</li>
+                        <li><strong>Date of Birth:</strong> 05 April 2003</li>
 
-                        <li><strong>Website :</strong> company.co</li>
+                        <li><strong>University :</strong> Universitas Bina Insan</li>
 
-                        <li><strong>Email :</strong> hello@company.co</li>
                     </ul>
                 </div>
 
                 <div class="col-lg-5 mx-auto col-md-6 col-12">
-                    <img src="images/true-agency.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template">
+                    <img src="images/true-a.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template">
                 </div>
 
             </div>
@@ -351,7 +350,7 @@ https://www.tooplate.com/view/2120-ben-resume
 
                 <p>
                     <a href="#">
-                        hello@company.co
+                      https://azzurideveloper.github.io/portofolio/
                     <i class="fas fa-arrow-right custom-icon"></i>
                     </a>
                 </p>
